--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,16 @@
     background-color: dimgray;
 }
 
-.navbar {   
+.navbar {
+    padding-top: 0px;
     padding-left: 10px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 20px;
 }
 
 .navbar-collapse {
     padding-right: 10px;
+    padding-top: 35px;
 }
 
 h1{
